src/objects/dev_Payment__x.object
<CustomObject>
    <description>Heroku Postgres Table - uat$Payment</description>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>uat$Payment</externalName>
    <fields>
        <fullName>account_number__c</fullName>
        <description>account_number</description>
        <externalDeveloperName>account_number</externalDeveloperName>
        <label>Contract</label>
        <length>30</length>
        <referenceTargetField>Contract.V10_Account_No__c</referenceTargetField>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>collection_status__c</fullName>
        <description>collection_status</description>
        <externalDeveloperName>collection_status</externalDeveloperName>
        <label>Payment Status</label>
        <length>100</length>
        <referenceTargetField>Code_Lookup__c.Code__c</referenceTargetField>
        <referenceTo>Code_Lookup__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>document_id__c</fullName>
        <description>document_id</description>
        <externalDeveloperName>document_id</externalDeveloperName>
        <label>document_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>Payment Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>paid_amount__c</fullName>
        <description>paid_amount</description>
        <externalDeveloperName>paid_amount</externalDeveloperName>
        <label>Payment Amount (PHP)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_date__c</fullName>
        <description>payment_date</description>
        <externalDeveloperName>payment_date</externalDeveloperName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>payment_mode__c</fullName>
        <description>payment_mode</description>
        <externalDeveloperName>payment_mode</externalDeveloperName>
        <label>Payment Mode</label>
        <length>100</length>
        <referenceTargetField>Code_Lookup__c.Code__c</referenceTargetField>
        <referenceTo>Code_Lookup__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments2</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>payment_office__c</fullName>
        <description>payment_office</description>
        <externalDeveloperName>payment_office</externalDeveloperName>
        <label>Payment Office</label>
        <length>100</length>
        <referenceTargetField>Code_Lookup__c.Code__c</referenceTargetField>
        <referenceTo>Code_Lookup__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments3</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>payment_source__c</fullName>
        <description>payment_source</description>
        <externalDeveloperName>payment_source</externalDeveloperName>
        <label>Payment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>posting_date__c</fullName>
        <description>posting_date</description>
        <externalDeveloperName>posting_date</externalDeveloperName>
        <label>Payment Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ref_number__c</fullName>
        <description>ref_number</description>
        <externalDeveloperName>ref_number</externalDeveloperName>
        <label>Payment Reference #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>return_checkreason__c</fullName>
        <description>return_checkreason</description>
        <externalDeveloperName>return_checkreason</externalDeveloperName>
        <label>Reason for APA Failed Transaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reversal_date__c</fullName>
        <description>reversal_date</description>
        <externalDeveloperName>reversal_date</externalDeveloperName>
        <label>reversal_date</label>
        <type>Date</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>id__c</columns>
        <columns>ref_number__c</columns>
        <columns>collection_status__c</columns>
        <columns>account_number__c</columns>
        <columns>payment_mode__c</columns>
        <columns>payment_office__c</columns>
        <columns>payment_source__c</columns>
        <columns>payment_date__c</columns>
        <columns>paid_amount__c</columns>
        <columns>posting_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Payments</pluralLabel>
</CustomObject>